--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   height: 100vh;
 }
 
@@ -6,4 +6,6 @@ body {
   display: block;
   position: absolute;
   bottom: 0;
+  width: 100%;
+  height: 50vh;
 }
