--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,4 @@
-body {
-    display: none;
+html, body {
     height: 100vh;
 }
 
@@ -7,4 +6,6 @@ body {
     display: block;
     position: absolute;
     bottom: 0;
+    width: 100%;
+    height: 50vh;
 }
