Added flow for groups (sans error reporting)

--- a/resources/ng/src/app/partials/group/form/form.component.html
+++ b/resources/ng/src/app/partials/group/form/form.component.html
@@ -11,5 +11,7 @@
     <label for="group-fs-path">URL</label>
     <input type="text" class="form-control" id="group-url" placeholder="Full or Partial path" formControlName="url">
   </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="button" (click)="addImage()" class="btn btn-light">Add Image</button>
 </form>
