--- a/resources/ng/src/app/pages/home/home.component.html
+++ b/resources/ng/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="col-12">
     <h2 class="d-flex justify-content-center">Projects</h2>
     <div class="row" *ngFor="let group of groups$ | async">
-      <div class="col-3">{{ group.title }}</div>
+      <div class="col-3"><a [routerLink]="['/group', group.id, 'edit']">{{ group.title }}</a></div>
       <div class="col-3">{{ group.fs_path }}</div>
       <div class="col-3"><a href="{{ group.url }}">{{ group.url }}</a></div>
       <div class="col-3 d-flex justify-content-center"><button (click)="delete(group.id!)">Delete</button></div>
